--- a/material-yew/Cargo.toml
+++ b/material-yew/Cargo.toml
@@ -14,7 +14,7 @@ description = "Yew wrapper for Material Web Components"
 
 [dependencies]
 wasm-bindgen = "0.2"
-yew = { version = "0.19" }
+yew = { git = "https://github.com/yewstack/yew", version = "0.19.3" }
 js-sys = "0.3"
 paste = "1.0"
 gloo = "0.2"
